compiler/tests/en/errors/old_decl_syntax.salam
// EXPECT: annotation
func main:
    x : int = 10
    println x
end
